# ext-cardano-dbsync-serverless

./: Cargo.toml  README.md  test
.github/image/: Dockerfile
.github/workflows/: clippy.yml  controller.yml  validate.yml
benchmark/: Dockerfile  README.md  bench.sql
bootstrap/: main.tf  variables.tf
bootstrap/cell/: main.tf  variables.tf
bootstrap/configs/: main.tf
bootstrap/crds/: main.tf
bootstrap/feature/: configs.tf  main.tf  monitor.tf  operator.tf  pg-configs.tf  postgres.tf  postgresql.conf  secret.tf
bootstrap/instance/: dbsync.tf  main.tf  monitor.tf  postgrest.tf
bootstrap/operator/: main.tf
bootstrap/pgbouncer/: cert.tf  deployment.tf  main.tf  pg-bouncer.tf  pgbouncer.ini.tftpl  service.tf  tiers.toml
bootstrap/postgres/: large.conf  main.tf  medium.conf  monitor.tf  pg-bouncer.tf  pg-configs.tf  pgbouncer.ini.tftpl  postgres.tf  postgresql.conf  queries.sql  small.conf  users.txt
bootstrap/pvc/: main.tf
operator/: .gitignore  Cargo.toml  Dockerfile  README.md
operator/benchmark/: README.md  results
operator/src/: config.rs  controller.rs  crdgen.rs  lib.rs  main.rs  metrics.rs  postgres.rs
operator/test/: manifest.yaml  validate-execution
operator/yaml/: crd.yaml  dbsyncport.yaml  port.yaml  user-access.yaml
scripts/: create_indexes.yml  grant_read_access.sh  grant_write_access.sh  reload-pgbouncer-configs.sh
src/: controller.rs  crdgen.rs  lib.rs  main.rs  metrics.rs  postgres.rs
test/: dbsyncport.yaml  manifest.yaml  validate-execution
yaml/: dbsyncport.yaml  user-access.yaml  user-namespace.yaml
(+11 files in other folders)
