[package]
name = "ext-cardano-dbsync"
version = "0.1.0"
edition = "2021"
default-run = "controller"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.29"
k8s-openapi = { version = "0.20.0", features = ["latest"] }
kube = { version = "0.87.1", features = ["runtime", "client", "derive"] }
schemars = "0.8.16"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.10"
serde_yaml = "0.9.25"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
prometheus = "0.13.3"
actix-web = "4.4.0"
bech32 = "0.9.1"
sha3 = "0.10.8"

[[bin]]
name = "controller"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[lib]
path = "src/lib.rs"

